Fix FAQ alignment issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -80,6 +80,8 @@ section + section { margin-top: 0 !important; }
   color: #fff !important;
   font-size: 20px !important;
   margin-bottom: 0 !important;
+  line-height: 1.3 !important;
+  letter-spacing: 2px !important;
 }
 
 .accordion-2 li .content {
